force-app/main/default/objects/Opportunity_Pipeline_Amount__c/Opportunity_Pipeline_Amount__c.object-meta.xml
<CustomObject>
    <label>Opportunity Pipeline</label>
    <nameField>
        <label>Opportunity Pipeline Amount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>