force-app/main/default/objects/Opportunity_Pipeline_Amount__c/fields/Goals_Performance__c.field-meta.xml
<CustomField>
    <fullName>Goals_Performance__c</fullName>
    <label>Goals &amp; Performance</label>
    <referenceTo>Goals_Performance__c</referenceTo>
    <relationshipName>Opportunity_Pipeline_Amount</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>