force-app/main/default/objects/Opportunity_Pipeline_Amount__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Pipeline</relationshipLabel>
    <relationshipName>Opportunity_Pipeline_Amount</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>