force-app/main/default/objects/Opportunity_Pipeline_Amount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;Partner Account&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Account</fullName>
                <default>true</default>
                <label>Partner Account</label>
            </value>
            <value>
                <fullName>OEM Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>